Updated style, added 3D models

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,10 +28,10 @@
     
                 <!-- Right-aligned user info -->
                 {% if 'username' in session %}
-                <div class="d-flex align-items-center">
+                <div class="navbar-nav d-flex align-items-center">
                     <span class="navbar-text me-3">Hello, {{ session['username'] }}</span>
                     <span class="navbar-text me-3">|</span>
-                    <a class="btn btn-sm color_button2" href="{{ url_for('index') }}">Change Name & Restart</a>
+                    <a class="nav-link" href="{{ url_for('index') }}">Change Name & Restart</a>
                 </div>
                 {% endif %}
             </div>
