--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <h1 class="d-flex fw-bold mb-4 justify-content-center">3D Conceptualization</h1>
 
     <!-- Description -->
-    <div class="intro-box mb-5 justify-content-center">
+    <div class="intro-box shadow mb-5 justify-content-center">
         <p>
             From 3D printing to animation to sculpting to engineering, knowing how to
             <strong>break down complex volumes into simple objects</strong> is a necessity.
