--- a/templates/results.html
+++ b/templates/results.html
@@ -29,7 +29,7 @@
                             {% if quiz_scores[quiz_num|string] == 100.0 %}
                                 <span><strong>Correct</strong></span>
                             {%else%}
-                                <span style="color: maroon;"><strong>Inorrect</strong></span>
+                                <span style="color: maroon;"><strong>Incorrect</strong></span>
                             {% endif %}
                         </div>
                     </div>
