--- a/static/css/style.css
+++ b/static/css/style.css
@@ -287,3 +287,25 @@ h1 {
     background-color: #ffc107;
     color: #212529;
 }
+
+
+
+/* Quiz Styles */
+
+.custom_radio{
+    border: 4px solid var(--main-color);
+}
+
+.custom_form_check{
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+    width: 15rem;
+}
+
+.custom_form_label{
+    width: 100%;
+    height: 100%;
+    margin-left: 1rem;
+}
+
