--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -101,13 +101,13 @@
                             <div class="col-lg-8">
                                 <br><br>
                                 {% for option in question.options %}
-                                <div class="form-check">
+                                <div class="form-check custom_form_check">
                                     <br><br>
-                                    <input class="form-check-input" type="radio" 
+                                    <input class="form-check-input custom_radio" type="radio" 
                                            name="{{ question.id }}" 
                                            id="{{ question.id }}_{{ loop.index }}" 
                                            value="{{ option.value }}" required>
-                                    <label class="form-check-label" for="{{ question.id }}_{{ loop.index }}">
+                                    <label class="form-check-label custom_form_label" for="{{ question.id }}_{{ loop.index }}">
                                         {{ option.text }}
                                     </label>
                                 </div>
