--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,20 +57,16 @@ h1 {
     color: white;
 }
 
-/* Back to Beginning Button */
 .largeBackToBeginningBtn {
-    background-color: #6c757d;
-    color: white;
+    background-color: 6c757d;
+    color: 6c757d;
     font-weight: 600;
-    font-size: 1.5rem; /* Smaller font size */
-    border-radius: 0.3rem; /* Slightly smaller border radius */
-    padding: 0.3rem 0.8rem; /* Reduced padding */
+    font-size: 3rem;
+    border-radius: 0.5rem;
+    padding: 0.5rem 1.5rem;
     border: none;
-    height: 3rem; /* Smaller height */
-    width: 80%; /* Adjusted width */
-    display: flex;
-    align-items: center; /* Vertically center text */
-    justify-content: center; /* Horizontally center text */
+    height: 5.5rem;
+    width: 100%;
     transition: background-color 0.2s ease;
 }
 
@@ -79,28 +75,25 @@ h1 {
     color: white;
 }
 
-/* Proceed to Quiz Button */
+
 .largeProceedToQuizBtn {
     background-color: var(--accent-color);
     color: var(--secondary-color);
     font-weight: 600;
-    font-size: 1.5rem; /* Smaller font size */
-    border-radius: 0.3rem; /* Slightly smaller border radius */
-    padding: 0.3rem 0.8rem; /* Reduced padding */
+    font-size: 3rem;
+    border-radius: 0.5rem;
+    padding: 0.5rem 1.5rem;
     border: none;
-    height: 3rem; /* Smaller height */
-    width: 80%; /* Adjusted width */
-    display: flex;
-    align-items: center; /* Vertically center text */
-    justify-content: center; /* Horizontally center text */
+    height: 5.5rem;
+    width: 100%;
     transition: background-color 0.2s ease;
-    float:right;
 }
 
 .largeProceedToQuizBtn:hover {
     background-color: var(--accent-highlight-color);
     color: white;
 }
+
 
 /* HOMEPAGE-SPECIFIC LARGE BUTTON */
 .homepage-continue-btn {
@@ -295,6 +288,23 @@ h1 {
     color: #212529;
 }
 
-.qr {
-    margin-top: 30px;
+
+
+/* Quiz Styles */
+
+.custom_radio{
+    border: 4px solid var(--main-color);
+}
+
+.custom_form_check{
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+    width: 15rem;
+}
+
+.custom_form_label{
+    width: 100%;
+    height: 100%;
+    margin-left: 1rem;
 }
