--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
     <!-- Description -->
     <div class="intro-box shadow mb-5 justify-content-center">
         <p>
-            From 3D printing to animation to sculpting to engineering, knowing how to
-            <strong>break down complex volumes into simple objects</strong> is a necessity.
+            For anything from 3D printing to animation to sculpting to engineering, knowing how to
+            <strong>break down complex volumes into simple objects</strong> is a necessary skill to have.
         </p>
         <p>
             Learn how to conceptualize most objects using basic 3D primitives and
