--- a/templates/module.html
+++ b/templates/module.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <div class="card">
-    <div class="card-header text-white color_header1">
-        <h3 class="card-title">{{ module.title }}</h3>
+    <div class="card-header text-white color_header1 d-flex align-items-center">
+        <h3 class="card-title mb-0">{{ module.title }}</h3>
     </div>
     <div class="card-body" style="height: 600px;">
         {% if module.type == 1 %}
