--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -2,18 +2,18 @@
 
 {% block content %}
 <div class="card">
-    <div class="card-header text-white color_header1">
-        <h3 class="card-title">{{ module.title }}</h3>
+    <div class="card-header text-white color_header1 d-flex align-items-center">
+        <h3 class="card-title mb-0">{{ module.title }}</h3>
     </div>
-    <div class="card-body" style="height: 600px;">
-        <form id="quizForm" method="POST" action="{{ url_for('submit_quiz', module_id=module_id) }}">
+    <div class="card-body" style="height: 600px; max-height: 600px; min-height: 100%; display: flex; flex-direction: column;">
+        <form id="quizForm" method="POST" action="{{ url_for('submit_quiz', module_id=module_id) }}" style="height: 100%; max-height: 100%; min-height: 100%;">
             {% for question in module.questions %}
-            <div class="quiz-question mb-4 p-3 border rounded">
+            <div class="quiz-question mb-4 p-3 border rounded" style="height: 100%; max-height: 100%; min-height: 100%;">
                 <h5>{{ question.text }}</h5>
-                <div class="row">
-                    <div class="col-lg-6">
+                <div class="row" style="height: 100%; min-height: 100%;">
+                    <div class="col-lg-6" style="height: 100%; min-height: 100%;">
                         {% if question.type == 'drag-drop' %}
-                        <div class="drag-drop-question">
+                        <div class="drag-drop-question" style="height: 100%; min-height: 100%;">
                             <br><br><br>
                             <div class="drag-elements mb-3">
                                 {% for item in question.drag_items %}
@@ -27,7 +27,6 @@
                                 <p class="text-muted mb-0">Drop answer here</p>
                                 <input type="hidden" name="{{ question.id }}" class="drop-value" required>
                             </div>
-                            <br><br><br><br><br><br><br><br>
                         </div>
                         
                         {% elif question.type == 'matching' %}
@@ -148,7 +147,7 @@
                             </div>
                         </div>
                         {% if module.model %}
-                            <model-viewer alt="{{ module.title }}" src="{{ url_for('static', filename='models/' + module.model) }}" shadow-intensity="1" camera-controls touch-action="pan-y" style="width: 100%; height: 100%; max-height: 500px;">></model-viewer>
+                            <model-viewer alt="{{ module.title }}" src="{{ url_for('static', filename='models/' + module.model) }}" shadow-intensity="1" camera-controls touch-action="pan-y" style="width: 100%; height: 100%; max-height: 500px;"></model-viewer>
                         {% endif %}
                     </div>
                 </div>
