--- a/static/css/style.css
+++ b/static/css/style.css
@@ -319,3 +319,27 @@ h1 {
 .qr {
     margin-top: 30px;
 }
+
+.model-container {
+    position: relative;
+    width: 100%;
+}
+.model-container-quiz {
+    position: relative;
+    width: 100%;
+    height: 500px; /* Adjust height as needed */
+    overflow: hidden;
+}
+
+.overlay-image {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 65px; /* Adjust size as needed */
+    height: auto;
+    z-index: 10;
+    pointer-events: none; /* Allows interaction with model underneath */
+    border: 2px solid white;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px var(--main-color);
+}
