--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -147,7 +147,10 @@
                             </div>
                         </div>
                         {% if module.model %}
+                        <div class="model-container-quiz">
                             <model-viewer alt="{{ module.title }}" src="{{ url_for('static', filename='models/' + module.model) }}" shadow-intensity="1" camera-controls touch-action="pan-y" style="width: 100%; height: 100%; max-height: 500px;"></model-viewer>
+                            <img src="{{ url_for('static', filename='images/360tooltip.png') }}" alt="Overlay" class="overlay-image">
+                        </div>
                         {% endif %}
                     </div>
                 </div>
