--- a/templates/module.html
+++ b/templates/module.html
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-12 text-center" style="text-align: center;">
+                        <div class="d-inline-block w-auto mx-auto text-center justify-content-center" style="text-align: center;">
                             {{ module.caption2|safe }}
                         </div>
                     </div>
