--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -115,14 +115,20 @@
                         </div>
                         {% endif %}
                     </div>
-                    <div class="col-lg-6">
-                        <div class="row">
-                            <div class="col-lg-12">
+                    <div class="col-lg-6" style="height: 100%; max-height: 100%;">
+                        <div class="row" style="height: 90%">
+                            <div class="col-lg-12" style="height: 100%; max-height: 100%;">
                                 {% if module.image1 %}
                                     <img src="{{ url_for('static', filename='images/' + module.image1) }}" 
                                         class="img-fluid mb-3 rounded" 
                                         alt="{{ module.title }}"
-                                        style="height: 100%; max-height: 450px; width: 100%;">
+                                        style="max-height: 100%; height: 100%; width: auto; display: block; margin: 0 auto;">
+                                {% endif %}
+                                {% if module.model %}
+                                    <div class="model-container-quiz">
+                                        <model-viewer alt="{{ module.title }}" src="{{ url_for('static', filename='models/' + module.model) }}" shadow-intensity="1" camera-controls touch-action="pan-y" style="width: 100%; height: 100%; max-height: 500px;"></model-viewer>
+                                        <img src="{{ url_for('static', filename='images/360tooltip.png') }}" alt="Overlay" class="overlay-image">
+                                    </div>
                                 {% endif %}
                             </div>
                         </div>
@@ -146,12 +152,6 @@
                                 {% endif %}
                             </div>
                         </div>
-                        {% if module.model %}
-                        <div class="model-container-quiz">
-                            <model-viewer alt="{{ module.title }}" src="{{ url_for('static', filename='models/' + module.model) }}" shadow-intensity="1" camera-controls touch-action="pan-y" style="width: 100%; height: 100%; max-height: 500px;"></model-viewer>
-                            <img src="{{ url_for('static', filename='images/360tooltip.png') }}" alt="Overlay" class="overlay-image">
-                        </div>
-                        {% endif %}
                     </div>
                 </div>
             </div>
